<resources>
    <string name="app_name">ChopChop</string>
    <string name="chicken_option">Chicken_Option</string>
    <string name="burgers_option">burgers_option</string>
    <string name="pizza_option">pizza_option</string>
    <string name="sushi_option">sushi_option</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="restaurants">Restaurants</string>
    <string name="my_plate">My Plate</string>
    <string name="account">Account</string>
    <string name="textview">TextView</string>
    <string name="_1_10_piece_chicken_mcnuggets">10 Piece Chicken McNuggets</string>
    <string name="mcdonald_s_8_00">McDonald\'s $8.00</string>
    <string name="sweet_and_sour_sauce">Sweet and Sour Sauce</string>
    <string name="pizzabackground">pizzabackground</string>
    <string name="medium_hand_tossed_pizza">Medium Hand Tossed Pizza</string>
    <string name="pepperoni_mushrooms_extra_cheese">Pepperoni + Mushrooms + Extra Cheese</string>
    <string name="domino_s_pizza_15_00">Domino\'s Pizza $15.00</string>
    <string name="pay_now_25_00">Pay Now: $25.00</string>
    <string name="_1">$1</string>
    <string name="_3">$3</string>
    <string name="_2">$2</string>
    <string name="_4">$4</string>
    <string name="add_a_tip">Add a tip</string>
</resources>
