<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="139dp"
            android:scaleType="fitXY"
            tools:ignore="MissingConstraints"
            android:accessibilityHeading="false"
            android:adjustViewBounds="false"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/chicken_option"
            app:srcCompat="@drawable/chicken" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="139dp"
            android:scaleType="fitXY"
            tools:ignore="MissingConstraints"
            android:accessibilityHeading="false"
            android:adjustViewBounds="false"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/burgers_option"
            app:srcCompat="@drawable/burgers" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="139dp"
            android:accessibilityHeading="false"
            android:adjustViewBounds="false"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/pizza_option"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/pizza"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="139dp"
            android:accessibilityHeading="false"
            android:adjustViewBounds="false"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/sushi_option"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/sushi" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="731dp"
            android:orientation="horizontal">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#D80000"
                android:icon="@drawable/ic_launcher_foreground"
                android:text="@string/monday" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_launcher_foreground"
                android:text="@string/tuesday" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_launcher_foreground"
                android:text="@string/wednesday" />
        </com.google.android.material.tabs.TabLayout>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>