<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/FoodItemMyPlate"
            android:layout_width="wrap_content"
            android:layout_height="139dp"
            android:accessibilityHeading="false"
            android:adjustViewBounds="false"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/chicken_option"
            android:scaleType="fitXY"
            android:src="@drawable/chicken"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="139dp"
            android:accessibilityHeading="false"
            android:adjustViewBounds="false"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/burgers_option"
            android:scaleType="fitXY"
            android:src="@drawable/burgers"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="139dp"
            android:accessibilityHeading="false"
            android:adjustViewBounds="false"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/pizza_option"
            android:scaleType="fitXY"
            android:src="@drawable/pizza"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="wrap_content"
            android:layout_height="139dp"
            android:accessibilityHeading="false"
            android:adjustViewBounds="false"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/sushi_option"
            android:scaleType="fitXY"
            android:src="@drawable/sushi" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>




